--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
@@ -202,7 +202,7 @@
                                     <tr>
                                         <td class="bg-table-green">Etapa</td>
                                         <td class="bg-table-green" style="text-align:center">Duración (Dias)</td>
-                                        <td class="bg-table-green" style="text-align:center">Fecha Inicio (dd/mm/aaa)</td>
+                                        <td class="bg-table-green" style="text-align:center">Fecha Inicio (aaa/mm/dd)</td>
                                         <td class=""></td>
                                     </tr>
                                     @foreach (var rowx in Model.ProjectTask)
