--- a/PMCTool.App/Views/ReportedIncidents/_ReportIncidents.cshtml
+++ b/PMCTool.App/Views/ReportedIncidents/_ReportIncidents.cshtml
@@ -68,7 +68,7 @@
                                                     <th style="color: #ffffff !important;" scope="col">Incidente</th>
                                                     <th style="color: #ffffff !important;" scope="col">Elemento relacionado</th>
                                                     <th style="color: #ffffff !important;" scope="col">Fecha de solución</th>
-                                                    <th style="color: #ffffff !important;" scope="col">Detalle del incidente</th>
+                                                    <th style="color: #ffffff !important;" scope="col">Acciones Realizadas Para Continuar</th>
                                                     <th style="color: #ffffff !important;" scope="col">Estatus</th>
                                                 </tr>
                                             </thead>
