--- a/PMCTool.App/Views/ReportedIncidents/Index.cshtml
+++ b/PMCTool.App/Views/ReportedIncidents/Index.cshtml
@@ -29,7 +29,7 @@
                                             <option value="DGDFM">Dirección General de Desarrollo Ferroviario y Multimodal (DGDFM)</option>
                                 </select>
                             </div>
-                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4"  style="display: none;">
                                 <select multiple name="TipoP" id="TipoProyecto" class="selectpicker" data-title="Tipo de proyecto" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
                                     <option value="1">Plan Estratégico para el Bienestar</option>
                                     <option value="2">Reactivación Económica</option>
@@ -57,7 +57,7 @@
                                         <option value="Otro">Otro</option>
                                 </select>
                             </div>
-                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4"  style="display: none;">
                                 <select multiple name="Anuncio" id="Anuncio" class="selectpicker" data-title="Anuncio / Contrato" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
                                    <option value="1">Plurianualidades</option>
                                             <option value="2">Primer Anuncio</option>
