--- a/PMCTool.App/Views/ActionsToMake/Index - Copia.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/Index - Copia.cshtml
@@ -1,10 +1,10 @@
 ﻿@model PMCTool.Models.Core.Location
 @{
-    ViewData["Title"] = "Ubicacion de proyectos";
+    ViewData["Title"] = "Acciones a realizar";
     Layout = "_Layout";
-     var envName = Context.Request.Cookies["pmctool-name-env"]; 
-} 
+    var envName = Context.Request.Cookies["pmctool-name-env"]; 
 
+}
 <div class="content">
     <div class="container-fluid">
 
@@ -13,7 +13,7 @@
                 <div class="col-md-12 pt-4">
                     <small class="font-weight-normal">Analytics</small>
                     <h4 class="media align-items-center font-weight-bold  mb-0 mt-0">
-                        <span class="title-report"> Ubicación de proyectos	</span>
+                        <span class="title-report"> Acciones a realizar	</span>
                     </h4>
                 </div>
                 <div class="">
@@ -31,7 +31,7 @@
                                             <option value="CRyA">Dirección de Caminos Rurales y Alimentadores (CRyA)</option>
                                             <option value="DGCC">Dirección General de Conservación de Carreteras (DGCC)</option>
                                             <option value="DGDC">Dirección General de Desarrollo Carretero (DGDC)</option> 
-                                            <option value="DGDFM">Dirección General de Desarrollo Ferroviario y Multimodal (DGDFM)</option> 
+                                            <option value="DGDFM">Dirección General de Desarrollo Ferroviario y Multimodal (DGDFM)</option>
                                         </select>
                                     </div>
                                     <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4"  style="display: none;">
@@ -101,24 +101,63 @@
                                 </button>
                             </div>
                             <div class="col-12">
-                                <div class="card" id="divCardMap" hidden>
-                                    <div class="card-body ">
-                                        <div id="regularMap" class="map"></div>
+                                <div class="card" id="cardTable" hidden>
+                                    <div class="card-body " id="messageBox">
+                                        <div class="row justify-content-center" id="rowTable">
+                                            <div class="col-12">
+                                                <div class="card data-tables">
+                                                    <div class="card-body table-striped table-no-bordered table-hover dataTable dtr-inline table-full-width">
+                                                        <div class="toolbar">
+                                                            <!--        Here you can write extra buttons/actions for the toolbar              -->
+                                                        </div>
+                                                        <div class="row">
+                                                            <div class="col-md-12 text-right text-right">
+                                                                  
+                                                                <button class="btn btn-social btn-tumblr btn-link" id="btnReportPDF">
+                                                                <i class="fas fa-file-pdf"></i> Exportar en PDF
+                                                                </button>
+                                                            </div>
+                                                            
+                                                        </div>
+                                                       
+                                                        <div class="fresh-datatables">
+                                                            <table id="datatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%">
+                                                                <thead>
+                                                                    <tr class="div-detail-head">
+                                                                        <th>Código</th>
+                                                                        <th>Proyecto</th>
+                                                                        <th>Inversión MDP</th>
+                                                                        <th>Inicio de obra</th>
+                                                                        <th>Fase</th>
+                                                                        <th>Estatus</th>
+                                                                        <th>Acciones a realizar</th>
+                                                                        <th>Nota aclaratoria</th>
+                                                                    </tr>
+                                                                </thead>
+                                                                <tbody id="datatable">
+                                                                    
+                                                                </tbody>
+                                                            </table>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                         @if (envName == "Sct")
+                    </div>
+                    <!-- end allow-->
+                </div>
+                @if (envName == "Sct")
                         {
-                            <div class="row pt-4">
+                            <div class="row pt-1">
                                 <div class="col-md-12 text-right">
                                     <img src="/images/ricardofm.png?v=1" style="max-height: 100px;">
                                 </div>
                              </div>
-                        }    
-                    </div>
-                    <!-- end allow-->
-                </div>
+                        } 
             </div>
         </div>
     </div>
@@ -126,8 +165,7 @@
 <!--Sección de scripts-->
 @section scripts
 {
-    <!--  Google Maps Plugin    -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZB57EktUvtI-_viuGOnaD8FzAn4OCpH8&libraries=&v=weekly" defer></script>
-    <script src="~/js/core/vProjectsLocation.js" asp-append-version="true"></script>
+    <!--  DataTable Plugin -->
+    <script src="~/js/plugins/jquery.dataTables.min.js"></script>
+    <script src="~/js/core/vActionsToMake.js" asp-append-version="true"></script>
 }
-
