--- a/PMCTool.App/Views/GlobalStatus/Index_respaldp.cshtml
+++ b/PMCTool.App/Views/GlobalStatus/Index_respaldp.cshtml
@@ -1,9 +1,9 @@
 ﻿@model PMCTool.Models.Core.Location
 @{
-    ViewData["Title"] = "Inversión Acumulada";
+    ViewData["Title"] = "Estatus Global";
     Layout = "_Layout";
 }
-    <link href="~/css/speech-bubble.css" rel="stylesheet" />
+
 <div class="content">
     <div class="container-fluid">
         <div class="col-md-12 card">
@@ -11,7 +11,7 @@
                 <div class="col-md-12 pt-4">
                     <small class="font-weight-normal">Analytics</small>
                     <h4 class="media align-items-center font-weight-bold  mb-0 mt-0">
-                        <span class="title-report">Inversión Acumulada</span>
+                        <span class="title-report"> Estatus global</span>
                     </h4>
                 </div>
                 <!-- allow-->
@@ -20,25 +20,25 @@
                         <div class="col-12">
                             <div class="row">
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { multiple = true, @id = "Entidad", @class = "selectpicker", @data_style = "btn-default btn-outline", @data_title = "Entidad Federativa", @data_live_search = true, @data_actions_box = true })
+                                    @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { multiple = true, @id = "Entidad", @class = "selectpicker", @data_style = "btn-default btn-outline", @data_title = "Entidad Federativa", @data_live_search = true, @data_actions_box = true }) 
                                 </div>
                                 <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                     <select name="DireccionG" id="DireccionGral" class="selectpicker" data-title="Dirección General" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" multiple data-live-search="true" data-actions-box="true">
-                                          <option value="CF">Dirección de Carreteras Federales (CF)</option>
+                                        <option value="CF">Dirección de Carreteras Federales (CF)</option>
                                         <option value="CRyA">Dirección de Caminos Rurales y Alimentadores (CRyA)</option>
                                         <option value="DGCC">Dirección General de Conservación de Carreteras (DGCC)</option>
                                         <option value="DGDC">Dirección General de Desarrollo Carretero (DGDC)</option> 
                                         <option value="DGDFM">Dirección General de Desarrollo Ferroviario y Multimodal (DGDFM)</option> 
                                     </select>
                                 </div>
-                                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4"  style="display: none;">
+                                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4" style="display: none;">
                                     <select multiple name="TipoP" id="TipoProyecto" class="selectpicker" data-title="Tipo de proyecto" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
                                         <option value="1">Plan Estratégico para el Bienestar</option>
                                         <option value="2">Reactivación Económica</option>
                                         <option value="3">Obra Social</option>
                                         <option value="4">Programa Nacional de Infraestructura Ferroviaria</option>
-                                        <option value="6">Obras de Continuidad</option>
-                                        <option value="5">Por Definir</option>
+                                        <option value="6">Obras de Continuidad</option> 
+                                        <option value="5">Por Definir</option> 
                                     </select>
                                 </div>
 
@@ -60,16 +60,20 @@
                                         <option value="Otro">Otro</option>
                                     </select>
                                 </div>
-
-                                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <select name="Year" id="Year" class="selectpicker" data-title="Año" data-style="btn-default btn-outline" data-menu-style="dropdown-blue">
-                                        <option value="2019">2019</option>
-                                        <option value="2020">2020</option>
-                                        <option value="2021">2021</option>
-                                        <option value="2022">2022</option>
-                                        <option value="2023">2023</option>
-                                        <option value="2024">2024</option>
-                                    </select>
+                                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4"  style="display: none;">
+                                    <select multiple name="Anuncio" id="Anuncio" class="selectpicker" data-title="Anuncio / Contrato" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
+                                        <option value="1">Plurianualidades</option>
+                                            <option value="2">Primer Anuncio</option>
+                                            <option value="3">Segundo Anuncio</option>
+                                            <option value="4">Tercer Anuncio</option>
+                                            <option value="5">Obra Pública Tradicional</option>
+                                            <option value="6">Concesión Pública</option>
+                                            <option value="7">Concesión</option>
+                                            <option value="8">APP</option>
+                                            <option value="9">PPS</option>
+                                            <option value="10">Carga constructiva</option>
+                                            <option value="11">No Aplica</option>
+                                     </select>
                                 </div>
                                 <div class="col-12 mt-1 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                     <button type="button" id="btnSearch" class="btn btn-default btn-default">
@@ -84,18 +88,27 @@
                     </div>
                     <div class="row justify-content-center mt-4">
                         <div class="col-md-12 text-right text-right">
-                            <button class="btn btn-social btn-tumblr btn-link" id="export">
+                            <button type="button" id="btnDetalle" class="btn btn-wd btn-default btn-default mr-1" style="">
+                                <span class="btn-label"><i class="fas fa-align-justify"></i></span> Detalle Reporte
+                            </button>
+                            <button type="button" id="btnDetalleClose" class="btn btn-round btn-sm btn-back">
+                                <span class="btn-label">
+                                    <i class="fas fa-arrow-left"></i>
+                                </span>Regresar
+                            </button>
+                            @*<button type="button" id="btnDetalleClose" class="btn btn-wd btn-default btn-default mr-1" style="">
+                                    <span class="btn-label"><i class="fas fa-times"></i></span> Cerrar Detalle
+                                </button>*@
+                            <button class="btn btn-social btn-tumblr btn-link" hidden>
                                 <i class="fas fa-file-pdf"></i> Exportar en PDF
                             </button>
                         </div>
                         <div class="col-12">
-                            <div class="card">
-                                <div class="card-body ">
-                                    <div class="row justify-content-center">
-                                        <div class="col-12">
-                                            <div id="accumulated_investment_container_div">
+                            <div class="card data-tables">
+                                <div class="card-body table-striped table-no-bordered table-hover dataTable dtr-inline table-full-width">
+                                    <div class="toolbar">
+                                        <div class="_tableglobalstatus">
 
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -110,12 +123,6 @@
 
 <!--Sección de scripts-->
 @section scripts{
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/9.1.2/highcharts.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/9.1.2/modules/exporting.src.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/9.1.2/modules/exporting.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/9.1.2/modules/export-data.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/9.1.2/modules/accessibility.js" type="text/javascript"></script>
-
-    <script src="~/js/core/vAccumulatedInvestment.js" asp-append-version="true"></script>
+    <script src="~/js/plugins/jquery.dataTables.min.js"></script>
+    <script src="~/js/core/vGlobalStatus.js" asp-append-version="true"></script>
 }
-
