--- a/PMCTool.App/wwwroot/css/light-bootstrap-dashboard-sct.css
+++ b/PMCTool.App/wwwroot/css/light-bootstrap-dashboard-sct.css
@@ -14491,3 +14491,11 @@ hr {
 .archived {
     color: #545454;
 }
+.boxPoeid {
+    text-align: center;
+    font-family: 'Montserrat';
+    font-weight: 700;
+    font-size: 2em;
+    padding-top: 100px;
+    color: #686868;
+}
