Chart detail table construction

--- a/PMCTool.App/Views/ActionsToMake/Index.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/Index.cshtml
@@ -102,24 +102,10 @@
             </div>
             <div class="modal-body">
                 <table class="table">
-                    <thead class="thead-light">
-                        <tr style="background: #c1c1c1;">
-                            <th>PROGRAMA</th>
-                            <th>NOMBRE DE PROYECTO</th>
-                            <th>ESTATUS</th>
-                        </tr>
+                    <thead class="thead-light header-table-graphic">
+                        
                     </thead>
-                    <tbody>
-                        <tr>
-                            <th>PROFECO</th>
-                            <td>PROFECO COMPUTO</td>
-                            <td>EN CONFIGURACION</td>
-                        </tr>
-                        <tr>
-                            <th>PROFECO</th>
-                            <td>PROFECO COMPUTO</td>
-                            <td>EN CONFIGURACION</td>
-                        </tr>
+                    <tbody class="body-table-graphic">
                     </tbody>
                 </table>
             </div>
