Building the project detail table

--- a/PMCTool.App/Views/ActionsToMake/Index.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/Index.cshtml
@@ -62,22 +62,40 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 charts">
                                 <figure class="highcharts-figure">
                                     <div id="container1" style="height: 500px;"></div>
                                     <p class="highcharts-description"></p>
                                 </figure>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 charts">
                                 <figure class="highcharts-figure">
                                     <div id="container2" style="height: 500px;"></div>
                                     <p class="highcharts-description"></p>
                                 </figure>
                             </div>
-                            <div class="col-12">
+                            <div class="col-12" id="table" hidden>
                                 <div class="card">
                                     <div class="card-body ">
-                                        <div id="regularMap" class="map"></div>
+                                        <table class="table">
+                                            <thead class="thead-light header-table-projects">
+                                                <tr style="background: #c1c1c1;">
+                                                    <th>CODIGO</th>
+                                                    <th>PROYECTO</th>
+                                                    <th>ETAPA</th>
+                                                    <th>FASE</th>
+                                                    <th>ADMINISTRADOR DEL PROYECTO</th>
+                                                    <th>LIDER</th>
+                                                    <th>FECHA PLANEADA DE INICIO</th>
+                                                    <th>FECHA PLANEADA DE FIN</th>
+                                                    <th>ESTATUS</th>
+                                                    <th>AVANCE PLANEADO</th>
+                                                    <th>AVANCE REAL</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody class="body-table-projects">
+                                            </tbody>
+                                        </table>
                                     </div>
                                 </div>
                             </div>
