--- a/PMCTool.App/Views/ActionsToMake/Index.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/Index.cshtml
@@ -110,7 +110,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">DETALLE DEL REPORTE</h5>
+                <h5 class="modal-title" id="exampleModalLabel">@Localizer["detail-report"]</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -125,7 +125,7 @@
                 </table>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> 
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">@Localizer["Close"]</button>
             </div>
         </div>
     </div>
